objects/SFDC_Job_Function__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Options__c</fullName>
        <label>Benefit Options</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Core_Location__c</fullName>
        <label>Core Location</label>
        <picklist>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <label>Salary Range</label>
        <picklist>
            <picklistValues>
                <fullName>$30,000-$45,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$46,000-$60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$61,000-$85,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$86,000-$100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$101,000-$150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Function</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>